<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<TextView  
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Utilización de Servicios" 
	    android:gravity="center" 
	    android:textSize="20sp" 
	    android:padding="20dp"/>
	<LinearLayout  
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button 
			android:text="@string/canción"
			android:id="@+id/btnCancion"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
		</Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:text="@string/sonido"
			android:id="@+id/btnSonido"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/repuri"
			android:id="@+id/repUri">
		</Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/repaud"
			android:id="@+id/repAud">
		</Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detener"
			android:id="@+id/btnFin">
		</Button>
	</LinearLayout>
</LinearLayout>